# hotspot-payment-gateway

./: .env.example  .gitignore  .~lock.hotspot_gateway_spec_v4.docx#  README.md  alembic.ini  hotspot_gateway_spec_v4.docx  lint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2026-05-13_create_users_auth_providers_refresh_.py  2026-05-15_create_verification_tokens.py  2026-05-18_tenants_and_domain_models.py  2026-05-19_transaction_mikrotik_encryption.py
src/: config.py  database.py  main.py  models.py
src/audit/: models.py
src/auth/: config.py  dependencies.py  exceptions.py  oauth.py  router.py  service.py  tokens.py  utils.py
src/auth/models/: __init__.py  auth_provider.py  refresh_tokens.py  user.py  verification_token.py
src/auth/schemas/: __init__.py  auth.py  response.py
src/core/: config.py  encryption.py  logging.py  middleware.py  rate_limit.py  security.py
src/hotspot/models/: __init__.py  router.py  session.py
src/integrations/: email.py
src/payment/models/: __init__.py  payment_config.py  plan.py  transaction.py
src/tenant/: constants.py
src/tenant/models/: __init__.py  tenant.py
tests/: conftest.py
tests/auth/: test_auth_flow.py  test_email_verification.py  test_google_oauth.py  test_password_reset.py  test_rate_limit.py
